--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <nav id="nav-bar">
-      <ul>
-        <li><a class="nav-link" href="#login">Login</a></li>
-        <li><a class="nav-link" href="#home">Home</a></li>
-        <li><a class="nav-link" href="#footer">Footer</a></li>
-      </ul>
-    </nav>
-
     <header id="header">
+      <nav id="nav-bar">
+        <ul>
+          <li><a class="nav-link" href="#login">Login</a></li>
+          <li><a class="nav-link" href="#home">Home</a></li>
+          <li><a class="nav-link" href="#footer">Footer</a></li>
+        </ul>
+      </nav>
+
       <img id="header-img" src="" alt="" />
     </header>
 
@@ -36,6 +35,11 @@
         /><input id="submit" type="submit" />
       </form>
     </div>
+
+    <footer id="footer">
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+    </footer>
 
     <script src="js/index.js"></script>
   </body>
